# cppProjectTemplate

./: .gitignore  CMakeLists.txt  CMakeUserConfig.cmake  CMakeUserConfig.cmake.example  readme.md  vcpkg.json
SharedDLLExample/: CMakeLists.txt  testmain.cpp  testmylibrary.h
examples/advanced/: main.cpp
include/mylibrary/: mylibrary.h
lib/: mylibrary.cpp
src/: main.cpp
testing/: CMakeLists.txt  testmylibrary.cpp
tests/: CMakeLists.txt
tests/unit/: test_basic.cpp  test_calculator.cpp
